--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT = 5000
+MONGO_URI = mongodb+srv://mrigankshekharcr7:TgjVCXwdycVOA2Xu@cluster0.q3cjflf.mongodb.net/chat-app?retryWrites=true&w=majority&appName=Cluster0
