--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://mrigankshekharcr7:TgjVCXwdycVOA2Xu@cluster0.q3cjflf.mongodb.net/chat-app?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = 6a/4q3XneV2GpCPWZJM+n6IvrjtS582KuTjbr7399cI=
+NODE_ENV = development
